handle roundtrip and optimize filter
